Rename RealtimeMetroService to GtfsRtFeedService Rename RealtimeResponseAdaptor to RealtimeResponseConverter for clarify
Add additional Trip repository (because 300mb is too large to load into a map), and StopTimeRepository

Begin code to start working predicting how late a bus will be. Note that this is experimental, and probably going to be quite flawed